--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,12 +1,14 @@
 //COLOR
 
-$color-primary:#C70039  ;
+$color-primary:#C70039 ;
 $color-primary-light:  #D98880;
-$color-primary-dark:#641E16;
-$color-grey-dark:#777;
+$color-primary-dark:#b33939;
+$color-grey-dark:#84817a;
 $color-white: white;
 $color-black: black;
 $color-light-grey: rgba(204, 202, 202, 0.788);
+$color-border:#F97F51;
+$body-color:rgb(243, 237, 202);
 
 
 //Font
