--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -78,7 +78,7 @@
     text-decoration:none;
     text-align: center;
     padding-top: 2rem;
-    color:$color-primary;
+    color:$color-grey-dark;
     font-size: $default-font-size;
 
 }
