--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import "abstracts/functions";
+// @import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
@@ -19,6 +19,7 @@
 
 
 @import "pages/home";
+@import "base/RWD";
 
 
 
