--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,3 +1,22 @@
+.grid-container {
+  display: grid;
+  grid-template-columns: 210px 210px 210px 100px  50px 50px;
+  grid-gap: 10px;
+  padding: 20px;
+ 
+}
+.grid-container--text {
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 1.6rem;
+  cursor: pointer;
+  font-family: 'Allura', sans-serif;
+}
+.grid-container--text:hover{
+transform: scale(1.2);
+}
+
 .row {
     max-width: $grid-width;
     margin: 0 auto;
