--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,7 @@
 
 .header {
 	position: relative;
+	width: 100%;
 	height: 90vh;
 	background-image: linear-gradient(to right bottom,rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url('../Images/hero.jpg');
 	background-size: cover;
