--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,36 +1,46 @@
-.navigation {
-	height:6rem;
-	display: flex;
-	margin-left:5%;
-	margin-right: 5%;
-	margin-bottom:1%;
-	flex-flow: row wrap;
-	align-items: center;
-	justify-content: space-between;
-
-	&__logo-box {
-	top:4rem;
-	left: 4rem;
-	}
-
-	&__logo {
-		width: 10rem;
-	}
-	
-	&__text-box {
-		padding: 2rem;
-		font-weight: 900;
-	}
-
-	&__bar {
-		padding: 1rem;
-		text-decoration: none;
-		font-size: $default-font-size;
-		color: $color-grey-dark;
-	}
-	
-	&__button {
-		@include navigation_button;
-	}
-
-}
+.nav { position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 64px;
+	background: rgba(255,255,255,0.4);
+	border-bottom: 1px solid rgba(225,225,225,0.5);
+	z-index: 1000;
+  }
+  
+  .nav ul {
+	list-style: none;
+	text-align: center;
+	white-space: nowrap;
+	padding-right: 32px;
+  }
+  
+  .nav ul li {
+	display: inline;
+  }
+  
+  .nav ul li a {
+	font-family: 'Dancing Script', cursive;
+	font-weight: 400;
+	font-size: 25px;
+	text-shadow: #aaa69d 0px 0px 10px;
+	color:$color-white;
+	padding: 3rem 1.6rem;
+	transition: background 0.4s, text-shadow 0.4s;
+	cursor: pointer;
+  }
+  
+  .nav ul li a:hover {
+	background: rgba(255,255,255, 0.4);
+	text-shadow: 0 1px 5px rgba(0,0,0,0.15);
+  }
+  
+  .first {
+	margin-right: -0.17em;
+	border-right: none !important;
+  }
+  
+  .last {
+	margin-left: -0.17em;
+	border-left: none !important;
+  }
